fix spacing - enlargen user dashboard page inner background - fix max-width of category / region filters - put national yes/no labels on same line

--- a/jaba/src/pages/UserDashboardPage/CategoryFilter/CategoryFilter.module.css
+++ b/jaba/src/pages/UserDashboardPage/CategoryFilter/CategoryFilter.module.css
@@ -1,6 +1,6 @@
 .content {
     width: 90%;
-    max-width: 230px;
+    max-width: 296px;
     margin: 2% 0% 0% 8%;
 }
 
